<resources>
    <string name="app_name">T4EverAndroid</string>
    <string name="sign_in_icon">Sign In Icon</string>
    <string name="sign_in">Sign In</string>
    <string name="access_your_legacy_ai_account">Access your Legacy AI account</string>
    <string name="your_email_com">your@email.com</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="your_password">Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="start_building_your_digital_legacy">Start building your digital legacy</string>
    <string name="email_is_required">Email Is Required</string>
    <string name="password_is_required">Password Is Required</string>
    <string name="the_email_must_be_a_valid_format">The email must be a valid format</string>
    <string name="the_email_must_be_a_valid_email_address">The email must be a valid email address</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="authentication_is_expired">Authentication is expired</string>
    <string name="unknown_error_contact_administrator">Unknown error contact administrator</string>
    <string name="unknown_error_while_attempting_to_log_in">Unknown error while attempting to log in</string>
    <string name="name_is_required">Name Is Required</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="confirm_password_is_required">Please confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="you_must_accept_the_terms_and_conditions_before_continuing">You must accept the terms and conditions before continuing</string>
    <string name="notifications">notifications</string>
    <string name="options_user">options User</string>
    <string name="settings">Settings</string>
    <string name="media">Media</string>
    <string name="chat">Chat</string>
    <string name="messages">Messages</string>
    <string name="conversations">Conversations</string>
    <string name="questions">Questions</string>
    <string name="legacy_profiles">Legacy Profiles</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_legacy_profile">Create Legacy Profile</string>
    <string name="continue_building_your_digital_legacy">Continue building your digital legacy. Every Question,\nconversation, and message is a treasure for your loved ones.</string>
    <string name="questions_answered">Questions Answered</string>
    <string name="scheduled_messages">Scheduled Messages</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="manage_the_profiles">Manage the profiles of the people you want to preserve</string>
    <string name="create_profile">Create Profile</string>
    <string name="total_profiles">Total Profiles</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="start_creating_your_first_legacy_profile">Start creating your first legacy profile to preserve\nmemory of someone special</string>
    <string name="no_profiles_created">No profiles created</string>
    <string name="create_first_profile">Create First Profile</string>
    <string name="life_questions">Life Questions</string>
    <string name="select_a_legacy_profile_to_start">Select a legacy profile to start</string>
    <string name="new_question">New Question</string>
    <string name="search_questions">Search questions...</string>
    <string name="go_to_legacy_profiles">Go to legacy profiles</string>
    <string name="you_need_to_select_a_legacy_profile">You need to select a legacy profile to start adding\nquestions.</string>
    <string name="you_need_to_select_a_legacy_profile_conversation">You need to select a legacy profile to start recording\nconversations.</string>
    <string name="you_need_to_select_a_legacy_profile_messages">You need to select a legacy profile to start creating\nmessages.</string>
    <string name="you_need_to_select_a_legacy_profile_chat">You need to select a legacy profile to start start\nchatting.</string>
    <string name="you_need_to_select_a_legacy_profile_media">You need to select a legacy profile to start recording\nmedia.</string>
    <string name="new_message">New Message</string>
    <string name="new_media">New Media</string>
    <string name="verify_email">Verify Email</string>
    <string name="welcome">Welcome, %1$s!</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="full_name">Full Name</string>
    <string name="alias">Alias</string>
    <string name="relationship">Relationship</string>
    <string name="eg_father_mother_grandfather_friend">Eg: Father, Mother, Grandfather, Friend...</string>
    <string name="personality">Personality</string>
    <string name="eg_funny_serious_etc">Eg: Funny, Serious, etc...</string>
    <string name="birthdate">Birthdate</string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="deathdate">Deathdate</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="active_profile">Active Profile</string>
    <string name="answer_questions">Answer Questions</string>
    <string name="record_conversation">Record Conversation</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="portuguese">Portuguese</string>
    <string name="russian">Russian</string>
    <string name="united_state">United State</string>
    <string name="language_is_required">The Language is required</string>
    <string name="country_is_required">The Country is required</string>
    <string name="birthdate_is_required">The Birthdate is required</string>
    <string name="personality_is_required">The Personality is required</string>
    <string name="relationship_is_required">The Relationship is required</string>
    <string name="alias_is_required">The Alias is required</string>
    <string name="full_name_is_required">The Name is required</string>
    <string name="name_label">Name:</string>
    <string name="relationship_label">Relationship:</string>
    <string name="age_label">Age:</string>
    <string name="language_label">Language:</string>
    <string name="country_label">Country:</string>
    <string name="personality_label">Personality:</string>
    <string name="select">Select</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="image_profile">Image Profile</string>
    <string name="selected">Selected</string>
    <string name="you_need_to_select_a_legacy_to_start">You need to select a legacy profile to start adding \nquestions.</string>
    <string name="start_adding_questions_to_capture_the_essence_of">Start adding questions to capture the essence of %1$s</string>
    <string name="profile_selected_media">Start recording media to preserve the way of expressing yourself of %1$s</string>
    <string name="profile_selected_messages">Start creating special messages for %1$s</string>
    <string name="msg_delete_profile">Are you sure you want to delete this profile?\nYou will not be able to undo this.</string>
    <string name="edit_legacy_profile">Edit Legacy Profile</string>
    <string name="update_legacy_profile">Update Legacy Profile</string>
    <string name="age">Age</string>
    <string name="age_is_required">Age is required</string>
    <string name="category">Category</string>
    <string name="write_the_question_here">Write the question here...</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="write_the_answer_here">Write the answer here...</string>
    <string name="save_question">Save Question</string>
    <string name="you_must_write_a_question">You must write a question.</string>
    <string name="total_questions">Total Questions</string>
    <string name="answered">Answered</string>
    <string name="pending">Pending</string>
    <string name="categories">Categories</string>
    <string name="icon">Icon</string>
    <string name="all_categories">All Categories</string>
    <string name="personal">👤 Personal</string>
    <string name="family">👨‍👩‍👧‍👦 Family</string>
    <string name="career">💼 Career</string>
    <string name="hobbies">🎨 Hobbies</string>
    <string name="beliefs">🙏 Beliefs</string>
    <string name="memories">📷 Memories</string>
    <string name="wisdom">🧠 Wisdom</string>
    <string name="humor">😄 Humor</string>
    <string name="experiences">🌟 Experiences</string>
    <string name="compose">Compose</string>
    <string name="recipes">Recipes</string>
    <string name="music">Music</string>
    <string name="travel">Travel</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="tags">Tags</string>
    <string name="personal_no_icon">Personal</string>
    <string name="family_no_icon">Family</string>
    <string name="career_no_icon">Career</string>
    <string name="memories_no_icon">Memories</string>
    <string name="photos">Photos</string>
    <string name="t_attach_multiple_files_at_once">\t• 📎Attach multiple files at once</string>
    <string name="t_share_videos_of_special_moments">\t• 🎬Share videos of special moments</string>
    <string name="t_record_voice_messages">\t• 🎵Record voice messages</string>
    <string name="t_upload_photos_to_share_memories">\t• 📷Upload photos to share memories</string>
    <string name="t_quot_lessons_learned_quot">\t• \"Lessons learned\"</string>
    <string name="t_quot_family_stories_quot">\t• \"Family stories\"</string>
    <string name="t_quot_values_and_beliefs_quot">\t• \"Values and beliefs\"</string>
    <string name="t_quot_life_experiences_quot">\t• \"Life experiences\"</string>
    <string name="conversation_topics">Conversation topics:</string>
    <string name="t_quot_how_did_you_meet_person_quot">\t• \"How did you meet [person]?\"</string>
    <string name="t_quot_what_advice_would_you_give_me_for_life_quot">\t• \"What advice would you give me for life?\"</string>
    <string name="t_quot_what_is_your_favorite_memory_from_childhood_quot">\t• \"What is your favorite memory from childhood?\"</string>
    <string name="questions_you_can_ask">Questions you can ask:</string>
    <string name="tips_for_a_better_conversation">💡 Tips for a better conversation</string>
    <string name="share_media">Share media:</string>
</resources>