<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/nav_legacy_profiles"
        android:title="@string/legacy_profiles"
        android:icon="@drawable/ic_group"/>
    <item
        android:id="@+id/nav_questions"
        android:title="@string/questions"
        android:icon="@drawable/ic_questions"/>
    <item
        android:id="@+id/nav_conversations"
        android:title="@string/conversations"
        android:icon="@drawable/ic_conversations"/>
    <item
        android:id="@+id/nav_messages"
        android:title="@string/messages"
        android:icon="@drawable/ic_messages"/>
    <item
        android:id="@+id/nav_chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat_dashboard"/>
    <item
        android:id="@+id/nav_media"
        android:title="@string/media"
        android:icon="@drawable/ic_media"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
</menu>
