<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:id="@+id/card_chat_helper"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="8dp"
        android:background="@color/background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/tips_for_a_better_conversation"
            android:textColor="@color/soft_black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/questions_you_can_ask"
            android:textColor="@color/soft_black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_what_is_your_favorite_memory_from_childhood_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_what_advice_would_you_give_me_for_life_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_how_did_you_meet_person_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/conversation_topics"
            android:textColor="@color/soft_black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_life_experiences_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_values_and_beliefs_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_family_stories_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_quot_lessons_learned_quot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/share_media"
            android:textColor="@color/soft_black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_upload_photos_to_share_memories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_record_voice_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_share_videos_of_special_moments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

        <TextView
            android:text="@string/t_attach_multiple_files_at_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_text_color"
            android:textSize="13sp"
            android:layout_marginTop="1dp"
            android:maxLines="1"
            android:ellipsize="end"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
