<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/background"
    android:elevation="4dp"
    android:paddingStart="12dp"
    android:paddingEnd="8dp">

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:contentDescription="@string/navigation_drawer_open"
        android:src="@drawable/ic_menu"
        android:background="@null"
        android:layout_gravity="start|center_vertical"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/user_container"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginStart="5dp"
            android:contentDescription="@string/options_user"
            android:background="@drawable/ic_more_info"
            android:rotation="90"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
    </LinearLayout>

    <ImageButton
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/notifications"
        android:src="@drawable/ic_notification"
        android:layout_gravity="end"
        android:background="@null"
        android:layout_width="40dp"
        android:layout_height="42dp" />

</com.google.android.material.appbar.MaterialToolbar>
