<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:fitsSystemWindows="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:background="@color/white"
    android:layout_marginTop="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_group"
            android:tint="@color/text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="7dp"
            android:text="@string/no_profiles_created"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/text_color"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/start_creating_your_first_legacy_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="10dp"
            android:text="@string/create_first_profile"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_add"
            android:backgroundTint="@color/second_login_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>